k8s/notifier.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifier
  template:
    metadata:
      labels:
        app: notifier
    spec:
      containers:
      - name: notifier
        image: notifier:latest
        imagePullPolicy: Never
