k8s/eta-calculator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eta-calculator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eta-calculator
  template:
    metadata:
      labels:
        app: eta-calculator
    spec:
      containers:
        - name: eta-calculator
          image: xcenax/eta-calculator:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: eta-calculator
spec:
  selector:
    app: eta-calculator
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
