k8s/eta-calculator-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: eta-calculator
spec:
  selector:
    app: eta-calculator
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
