k8s/gps-tracker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gps-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gps-tracker
  template:
    metadata:
      labels:
        app: gps-tracker
    spec:
      containers:
        - name: gps-tracker
          image: xcenax/gps-tracker:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: gps-tracker
spec:
  selector:
    app: gps-tracker
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
