k8s/gps-tracker-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: gps-tracker
spec:
  selector:
    app: gps-tracker
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
