k8s/notifier-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: notifier
spec:
  selector:
    app: notifier
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
